Drupal: Updated private message template and CSS to fix layout bugs.

--- a/drupal/sites/default/boinc/themes/boinc/css/privatemsg-view.css
+++ b/drupal/sites/default/boinc/themes/boinc/css/privatemsg-view.css
@@ -1,12 +1,6 @@
 .privatemsg-box-fb {
   text-align  : left;
 }
-
-.left-column {
-  float       : left;
-  width       : 100px;
-}
-
 .privatemsg-box-fb .avatar-fb {
   margin      : 5px;
   text-align  : center;
@@ -15,52 +9,42 @@
  float    : none;
  padding  : 0 0 0 0;
 }
-.middle-column {
-  float       : left;
-  width       : 150px;
-  text-align  : right;
-}
-.name {
-  margin      : 5px 15px 0px 0px;
-  font-size   : 11px;
-  font-weight : bold;
-}
-.date {
-  color         : #777777;
-  font-size     : 9px;
-  margin-right  : 0.3em;
-  display       : inline;
-}
-.right-column {
-  margin:0 0 0 250px;
-}
-.clear-both {
-  clear       : both;
-}
-.bottom-border {
-  border-bottom: 1px solid #C5C5C5;
-  margin       : 0 0 10px 250px;
-}
+
 .message-body {
   padding     : 0px;
   margin      : 0 0 0 5px;
   overflow    : auto;
 }
-
-.standard-links {
-  display: inline;
+.message-name {
+  margin      : 5px 15px 0px 0px;
+  font-size   : 11px;
+  font-weight : bold;
+  letter-spacing: 1px;
+  margin: 0;
+  padding: 0;
+  text-transform : uppercase;
+}
+.message-date {
+  color         : #777777;
+  font-size     : 9px;
+  margin-right  : 0.3em;
+  display       : inline;
+}
+.clear-both {
+  clear       : both;
 }
 
+.message-links {
+  display: inline;
+}
 ul.message-actions {
   margin-top: 0.2em;
   margin-bottom: 0.2em;
   padding: 0px;
   display: inline;
 }
-
 .message-actions li {
   list-style-type:none;
-  /*float:left;*/
   background-image:none;
   display: inline;
   border-left: 1px solid #808080;
@@ -68,13 +52,11 @@ ul.message-actions {
   margin-right: 0.3em;
   padding: 0 0 0 0.6em;
 }
-
 .message-actions li.first {
   border-width: 0;
   margin-left: 0;
   padding-left: 0;
 }
-
 .message-actions li a {
   color: #aaa;
   font-weight: bold;
